# mkclean-pragmatic

./: .gitignore  CMakeLists.txt  README.md
mkclean/: CMakeLists.txt  mkclean.c
